<resources>
    <string name="app_name">Chat</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="user_name">User Name</string>
    <string name="log_out">Log Out</string>
    <string name="account_settings">Account Settings</string>
    <string name="all_users">All Users</string>
    <string name="your_email">Your Email</string>
    <string name="login">LOGIN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_requests_page">Welcome to Requests Page</string>
    <string name="welcome_to_chats_page">Welcome to Chats Page</string>
    <string name="welcome_to_friends_page">Welcome to Friends Page</string>
    <string name="account_status">Account Status</string>
    <string name="save_changes">Save Changes</string>
</resources>
