<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lenovo.chat.RegisterActivity">

    <include
        android:id="@+id/Register_toolbar"
        layout="@layout/app_bar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Register_toolbar"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:text="Create a New Account"
        android:textColor="@color/colorAccent"
        android:textSize="21sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Register_toolbar"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="120dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/user_name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_name"
        android:layout_marginLeft="8dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_email"
        android:layout_marginLeft="8dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/createAccount_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_pass"
        android:layout_centerInParent="true"
        android:text="@string/create_account"
        android:background="@color/colorAccent"
        android:layout_alignParentRight="true"
        android:layout_marginRight="17dp"
        android:textColor="#ffffff"
        android:padding="8dp"/>


</RelativeLayout>
