<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lenovo.chat.RegisterActivity">

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/app_bar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_toolbar"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:text="Login to your Account"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="21sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/log_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/log_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/log_email"
        android:layout_marginLeft="8dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/log_pass"
        android:layout_centerInParent="true"
        android:text="@string/login"
        android:background="@color/colorPrimary"
        android:layout_alignParentRight="true"
        android:layout_marginRight="17dp"
        android:layout_marginTop="15dp"
        android:textColor="#ffffff"
        android:padding="8dp"/>


</RelativeLayout>
